--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 * {
   box-sizing: border-box;
 }
+
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
