--- a/src/pages/RecipeDetailsPage.module.css
+++ b/src/pages/RecipeDetailsPage.module.css
@@ -1,3 +1,56 @@
-.header{
-    margin: 4em;
+.container {
+  margin-inline: 1rem;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Bebas Neue", sans-serif;
+}
+.container h1 {
+  margin-block: 3rem;
+}
+.container p {
+  color: var(--color-gray-800);
+}
+.headerContainer {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  margin: 1rem 0rem;
+  color: var(--color-gray-800);
+  font-size: 18px;
+}
+
+
+.container img {
+  margin-block: 0.5rem;
+}
+.control {
+  border-right: 1px solid black;
+  margin: 0;
+  height: fit-content;
+}
+.control > :first-child {
+  font-weight: bolder;
+  color: var(--color-gray-900);
+}
+.headerContainer p {
+  padding-inline: 5px;
+}
+.ingredientsContainer{
+    margin-block: 2.5rem;
+}
+.ingredientsContainer ul {
+  text-transform: capitalize;
+  font-weight: bold;
+  font-size: medium;
+  color: var(--color-gray-800);
+}
+
+.ingredientsContainer h2,
+.instructionsContainer h3 {
+  font-size: 1.7em;
 }
