added delete button and my recipes page

--- a/src/components/RecipeItem.module.css
+++ b/src/components/RecipeItem.module.css
@@ -15,6 +15,9 @@
   .itemContainer img {
     width: 100%; 
     display: block; 
+    height: 18rem;
+    width: 20rem;
+    border-radius: 5px;
   }
  
   .itemContainer .content {
