--- a/src/components/RecipesList.module.css
+++ b/src/components/RecipesList.module.css
@@ -1,7 +1,7 @@
 .recipesContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  row-gap: 25px;
+  gap: 25px;
   justify-content: center;
 }
 .recipesContainer a {
