--- a/src/pages/RecipeDetailsPage.module.css
+++ b/src/pages/RecipeDetailsPage.module.css
@@ -22,20 +22,38 @@ h6 {
   margin: 1rem 0rem;
   color: var(--color-gray-800);
   font-size: 18px;
+  align-items: center;
 }
 
 
 .container img {
   margin-block: 0.5rem;
+  max-width: 40rem;
+  max-height: 40rem;
 }
 .control {
   border-right: 1px solid black;
   margin: 0;
   height: fit-content;
 }
-.control > :first-child {
+.control > span:first-child {
   font-weight: bolder;
   color: var(--color-gray-900);
+}
+.controlBtn{
+  border: none;
+}
+.controlBtn button{
+  border: 1px solid var(--color-orange-100);
+  padding: 5px;
+  box-sizing: border-box;
+  cursor: pointer;
+  background: var(--color-orange-800);
+  color: antiquewhite;
+  font-weight: bold;
+}
+.controlBtn button:hover{
+  opacity: 80%;
 }
 .headerContainer p {
   padding-inline: 5px;
