--- a/src/pages/RecipeDetailsPage.module.css
+++ b/src/pages/RecipeDetailsPage.module.css
@@ -44,11 +44,11 @@ h6 {
   border: none;
 }
 .controlBtn button{
-  border: 1px solid var(--color-orange-100);
+  border: 1px solid var(--color-pink-100);
   padding: 5px;
   box-sizing: border-box;
   cursor: pointer;
-  background: var(--color-orange-800);
+  background: var(--color-pink-600);
   color: antiquewhite;
   font-weight: bold;
 }
@@ -71,4 +71,15 @@ h6 {
 .ingredientsContainer h2,
 .instructionsContainer h3 {
   font-size: 1.7em;
+}
+
+
+
+@media (max-width:767px) {
+  .container img{
+    max-width: 17rem;
+  }
+  .headerContainer{
+    gap: 10%;
+  }
 }
